# IoT_SDK_Cardano

./: .gitignore  CHANGELOG.md  CMakeLists.txt  PROJECT_STATUS.md  README.md  package.json
docs/: ADVANCED_FEATURES.md  ARCHITECTURE_ANALYSIS.md  FINAL_SUMMARY.md  INTEGRATION_GUIDE.md
examples/: CMakeLists.txt  backup  data_provenance_demo.cpp  data_submission.cpp  device_registration.cpp  energy_monitoring.cpp  identity_attestation_demo.cpp  p2p_communication.cpp  smart_contract_demo.cpp
examples/configs/: example_config.json
include/cardano_iot/: cardano_iot.h
include/cardano_iot/analytics/: iot_analytics.h
include/cardano_iot/core/: crypto_manager.h  device_manager.h  smart_contract_interface.h  transaction_manager.h
include/cardano_iot/data/: data_provenance.h
include/cardano_iot/energy/: power_manager.h
include/cardano_iot/identity/: did.h
include/cardano_iot/monitoring/: realtime_dashboard.h
include/cardano_iot/network/: cardano_client.h  network_utils.h  p2p_network.h
include/cardano_iot/performance/: performance_optimizer.h
include/cardano_iot/security/: attestation.h  authentication.h  encryption.h
include/cardano_iot/utils/: config.h  logger.h
src/: cardano_iot.cpp
src/core/: crypto_manager.cpp  device_manager.cpp  smart_contract_interface.cpp  transaction_manager.cpp
src/data/: data_provenance.cpp
src/energy/: power_manager.cpp
src/identity/: did.cpp
src/network/: cardano_client.cpp  p2p_network.cpp
src/security/: attestation.cpp  authentication.cpp  encryption.cpp
src/utils/: config.cpp  logger.cpp
tests/: CMakeLists.txt  data_provenance_tests.cpp  device_manager_tests.cpp  integration_tests.cpp  network_tests.cpp  power_manager_tests.cpp  security_tests.cpp  transaction_manager_tests.cpp
tests/utils/: test_utils.cpp  test_utils.h
